Adds enabled/disabled states for "add current tab"

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,20 +14,15 @@
         <div id="container">
             <div id="actions">
                 <div id="actions-secondary">
-                    <button class="mdc-button mdc-button--text" style="margin: auto;" id="clear-list">clear list</button>
+                    <button id="button-clear-list" class="mdc-button mdc-button--text" style="margin: auto;">clear list</button>
                 </div>
                 <div id="actions-primary">
-                    <button class="mdc-button mdc-button--unelevated" style="margin: auto;" id="add-current-tab">add current tab</button>
+                    <button id="button-add-current-tab" class="mdc-button mdc-button--unelevated" style="margin: auto;">add current tab</button>
                 </div>
             </div>
 
             <!-- <h1>Tabs in Quick Access</h1> -->
             <ul class="mdc-list" id="quick-access-list"></ul>
-
-            <div id="debug-html">
-                <hr />
-                <div><button class="mdc-button button-remove-item" id="list-item-0-remove">x</button></div>
-            </div>
         </div>
     </body>
 </html>
