Adss enabled/disabled state for tab context menu

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,7 +14,7 @@
         <div id="container">
             <div id="actions">
                 <div id="actions-secondary">
-                    <button id="button-clear-list" class="mdc-button mdc-button--text" style="margin: auto;">clear list</button>
+                    <button id="button-clear-list" class="mdc-button mdc-button--text mdc-button--secondary" style="margin: auto;">clear list</button>
                 </div>
                 <div id="actions-primary">
                     <button id="button-add-current-tab" class="mdc-button mdc-button--unelevated" style="margin: auto;">add current tab</button>
